Added cost with increase when user for multiply button. Also forgot to add index and css for previous commits so stuff might not work before this commit

--- a/css/styles.css
+++ b/css/styles.css
@@ -49,8 +49,6 @@
 }
 
 .center {
-    display: flex;
-    justify-content: center;
     background-color: green;
     width: 960px;
 }
@@ -76,6 +74,14 @@
 .right {
     flex-grow: 1;
     background-color: blue;
+}
+
+.autoclickerComponent {
+    height: 100%;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 
 .footer {
